progress-on-controllers-and-services

--- a/todo.txt
+++ b/todo.txt
@@ -1,1 +1,6 @@
 [] - Вынести логику получения юзера за рамки auth sevice
+[] - Объединить byId и bySlug
+[] - Доп проверка на существование товара когда создаем отзыв
+
+[] - Создать админ панель
+[] - Добавить средний рейтинг в карточку товара
