pagination-and-statistics

--- a/todo.txt
+++ b/todo.txt
@@ -1,6 +1,7 @@
 [] - Вынести логику получения юзера за рамки auth sevice
 [] - Объединить byId и bySlug
 [] - Доп проверка на существование товара когда создаем отзыв
+[] - Закончить статистику
 
 [] - Создать админ панель
 [] - Добавить средний рейтинг в карточку товара
